  background but MARKUP does not, HTML markup in Javadocs now has the
  same background as the rest of the comment.

- Any groups matched by a SPAN_REGEXP's BEGIN sequence are substituted
  into any positional parameters in the END sequence. This allows
  read-ins to be properly handled in languages like Shell Script, PHP,
  and Perl.

- Added JCL and SAS syntax highlighting (Bill McMilleon).

- Improved C pre-processor syntax highlighting.

- Updated NSIS2 syntax highlighting (Ryan Grove).

- Parrot syntax highlighting (Oliver Rutherfurd).

- Aspect-J syntax highlighting (Kasper Graversen).

}}}
{{{ Folding

- Different syntax styles are used for collapsed fold lines with
  different fold levels. Fold levels 1, 2 and 3 have distinct styles,
  and all higher levels are assigned another style.

- Alt-clicking on a fold triangle in the gutter narrows to that fold.

}}}
{{{ Action Bar

- Utilities->Action Bar (shortcut C+ENTER) shows the action bar, for
  quickly invoking editor commands and changing settings from the
  keyboard.

- Enter an action name (or a substring) to invoke that action.

- Press TAB for a completion popup.

- Enter a repeat count then invoke an action using any means to repeat
  that action.

- Enter "buffer.<prop>=<value>" to set the buffer-local property
  <prop> to <value>; for example, "buffer.tabSize=4" changes the
  curent buffer's tab size to 4.

- Enter "!buffer.<prop>=<value>" to set a buffer property on a global
  basis; for example, "!buffer.tabSize=4" changes the default tab size
  for all buffers to 4.

- Buffer-local properties are documented in the user's guide.

- Enter "<prop>=<value>" to set any other global property; for
  example, "view.showToolbar=false" hides the tool bar.

- Note that global property names are undocumented, so this feature is
  primarily for plugin developers. You can get a list using the
  Misc->Properties->jEdit Properties macro.

}}}
{{{ File System Browser
