@@ -8,6 +8,8 @@ and quirks that I need to fix eventually.
 
 - plugin api:
 
+  - classes named plugin but not real plugins: don't complain about
+    name/version
   - option panes.
     - port quicknotepad, errorlist, character map, send buffer,
       sidekick, xml.
@@ -20,7 +22,6 @@ and quirks that I need to fix eventually.
   - cache
 
 - can do perl q|...| etc. using begin/end substitution!
-- means of overriding escape to fix C# @"..." issue
 - perl: q{}, etc.
 - 
 - got a multiple i/o requests thing once
