@@ -24,5 +24,8 @@ For a description of <code>actions.xml</code> file syntax, see the
 <a href="ActionSet.html">ActionSet</a> class.<p>
 
 For a description of <code>dockables.xml</code> file syntax, see the
-<a href="DockableWindowManager.html">DockableWindowManager</a> class.
+<a href="gui/DockableWindowManager.html">DockableWindowManager</a> class.<p>
+
+For a description of <code>services.xml</code> file syntax, see the
+<a href="ServiceManager.html">ServiceManager</a> class.
 </body></html>
